--- a/Checklist.html
+++ b/Checklist.html
@@ -172,27 +172,26 @@ myApp.controller("ChecklistCtrl", function ($scope, userService) {
 
     $scope.submitForm = function() {
         var that = this;
-        var checklist_response = '';
+        var checklist_response;
         for(var i = 0; i < $scope.checklistitems.length; i++) {
             delete $scope.checklistitems[i].$$hashKey;
         }
         delete $scope.checklistitems.attributes;
         // create javascript remoting calls to backend
-        if (checklist_response == '') {
-            function getUrlVars() {
-                var vars = [], hash;
-                var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-                for (var i = 0; i < hashes.length; i++) {
-                    hash = hashes[i].split('=');
-                    vars.push(hash[0]);
-                    vars[hash[0]] = hash[1];
-                }
-                return vars;
-            } 
-            checklist_response = getUrlVars()['id'];
+        function getUrlVars() {
+            var vars = [], hash;
+            var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+            for (var i = 0; i < hashes.length; i++) {
+                hash = hashes[i].split('=');
+                vars.push(hash[0]);
+                vars[hash[0]] = hash[1];
+            }
+            return vars;
+        } 
+        checklist_response = getUrlVars()['id'];
+        if (checklist_response == null) {
+            checklist_response = '';
         }
-
-
         Visualforce.remoting.Manager.invokeAction(
             '{!$RemoteAction.ChecklistExtension.save_responses}',
             checklist_response,
